--- a/Haha.qrc
+++ b/Haha.qrc
@@ -2,6 +2,15 @@
   <qresource prefix="Haha">
     <file>Rectangle 10.png</file>
   </qresource>
+  <qresource prefix="Copycopycopy">
+    <file>Copycopycopy.png</file>
+  </qresource>
+  <qresource prefix="Trashcan">
+    <file>trashcan.png</file>
+  </qresource>
+  <qresource prefix="Galka_pustaya">
+    <file>galka.png</file>
+  </qresource>
   <qresource prefix="Kartinoka">
     <file>Group 9.png</file>
   </qresource>
