Почистил лишние картинки, сделал форму авторизации чуть красивее, попытался свести всё к одному стилю, поменял немного названий

--- a/Main_s.ui
+++ b/Main_s.ui
@@ -48,10 +48,10 @@
      <widget class="QWidget" name="horizontalLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>-10</x>
-        <y>230</y>
-        <width>791</width>
-        <height>271</height>
+        <x>1</x>
+        <y>158</y>
+        <width>771</width>
+        <height>331</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -59,8 +59,8 @@
         <widget class="QPushButton" name="Button_Zapolnit">
          <property name="maximumSize">
           <size>
-           <width>266</width>
-           <height>172</height>
+           <width>270</width>
+           <height>180</height>
           </size>
          </property>
          <property name="font">
@@ -73,13 +73,13 @@
 background-color: rgb(133, 114, 85);
 border-top-left-radius: 30px;
 border-bottom-right-radius: 30px;
-border: 3px solid;
+border: 2px solid;
 }
 #Button_Zapolnit:hover {
 background:#dabb8b;
 }
 #Button_Zapolnit:pressed {
-color: #FFFFFF;
+background-color: rgb(133, 114, 85);
 }</string>
          </property>
          <property name="text">
@@ -89,11 +89,11 @@ color: #FFFFFF;
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="Button_Dobavit">
+        <widget class="QPushButton" name="Button_Spisok">
          <property name="maximumSize">
           <size>
-           <width>266</width>
-           <height>172</height>
+           <width>270</width>
+           <height>180</height>
           </size>
          </property>
          <property name="font">
@@ -102,22 +102,22 @@ color: #FFFFFF;
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">#Button_Dobavit{
+          <string notr="true">#Button_Spisok{
 background-color: rgb(133, 114, 85);
 border-top-right-radius: 30px;
 border-bottom-left-radius: 30px;
-border: 3px solid;
+border: 2px solid;
 }
-#Button_Dobavit:hover {
+#Button_Spisok:hover {
 background:#dabb8b;
 }
-#Button_Dobavit:pressed {
-color: #FFFFFF;
+#Button_Spisok:pressed {
+background-color: rgb(133, 114, 85);
 }</string>
          </property>
          <property name="text">
-          <string>ДОБАВИТЬ
-ДОКУМЕНТ</string>
+          <string>СПИСОК
+ФОРМ</string>
          </property>
         </widget>
        </item>
@@ -126,37 +126,48 @@ color: #FFFFFF;
      <widget class="QWidget" name="verticalLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>10</y>
+        <x>1</x>
+        <y>1</y>
         <width>771</width>
-        <height>221</height>
+        <height>161</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="Glavnaya">
-         <property name="font">
-          <font>
-           <pointsize>72</pointsize>
-          </font>
-         </property>
-         <property name="contextMenuPolicy">
-          <enum>Qt::DefaultContextMenu</enum>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">border-top-left-radius: 55px;
+        <layout class="QHBoxLayout" name="horizontalLayout_5">
+         <item>
+          <widget class="QLabel" name="Glavnaya">
+           <property name="maximumSize">
+            <size>
+             <width>760</width>
+             <height>142</height>
+            </size>
+           </property>
+           <property name="font">
+            <font>
+             <pointsize>72</pointsize>
+            </font>
+           </property>
+           <property name="contextMenuPolicy">
+            <enum>Qt::DefaultContextMenu</enum>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">border: 2px solid;
+border-top-left-radius: 55px;
 border-top-right-radius: 55px;
 border-bottom-right-radius: 20px;
 border-bottom-left-radius: 20px;
 background-color: qlineargradient(spread:pad, x1:0.505682, y1:0, x2:0.501, y2:0.511, stop:0 rgba(19, 19, 19, 255), stop:0.0227273 rgba(89, 67, 42, 239), stop:1 rgba(249, 179, 96, 200));</string>
-         </property>
-         <property name="text">
-          <string>ГЛАВНАЯ</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
+           </property>
+           <property name="text">
+            <string>ГЛАВНАЯ</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
@@ -171,9 +182,9 @@ background-color: qlineargradient(spread:pad, x1:0.505682, y1:0, x2:0.501, y2:0.
      <widget class="QWidget" name="verticalLayoutWidget_2">
       <property name="geometry">
        <rect>
-        <x>-10</x>
+        <x>0</x>
         <y>10</y>
-        <width>781</width>
+        <width>771</width>
         <height>481</height>
        </rect>
       </property>
@@ -194,7 +205,8 @@ background-color: qlineargradient(spread:pad, x1:0.505682, y1:0, x2:0.501, y2:0.
             </font>
            </property>
            <property name="styleSheet">
-            <string notr="true">background-color: qlineargradient(spread:pad, x1:0.505682, y1:0, x2:0.501, y2:0.511, stop:0 rgba(19, 19, 19, 255), stop:0.0227273 rgba(89, 67, 42, 239), stop:1 rgba(249, 179, 96, 200));
+            <string notr="true">border: 2px solid;
+background-color: qlineargradient(spread:pad, x1:0.505682, y1:0, x2:0.501, y2:0.511, stop:0 rgba(19, 19, 19, 255), stop:0.0227273 rgba(89, 67, 42, 239), stop:1 rgba(249, 179, 96, 200));
 border-top-left-radius: 55px;
 border-top-right-radius: 55px;
 border-bottom-left-radius: 22px;
