--- a/Main_Form.ui
+++ b/Main_Form.ui
@@ -24,7 +24,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="Main_page">
        <property name="maximumSize">
@@ -304,8 +304,8 @@ border-bottom-color: rgb(255, 76, 0);
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>941</width>
-                 <height>287</height>
+                 <width>957</width>
+                 <height>345</height>
                 </rect>
                </property>
                <property name="layoutDirection">
@@ -318,7 +318,7 @@ border-bottom-color: rgb(255, 76, 0);
                 <item>
                  <widget class="QStackedWidget" name="stackedWidget_2">
                   <property name="currentIndex">
-                   <number>7</number>
+                   <number>1</number>
                   </property>
                   <widget class="QWidget" name="page_2">
                    <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -4165,194 +4165,142 @@ background-color: rgb(194, 194, 194);
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_11">
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_4">
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_6">
-            <item>
-             <widget class="QLabel" name="label">
-              <property name="maximumSize">
-               <size>
-                <width>777</width>
-                <height>30</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <pointsize>20</pointsize>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true"/>
-              </property>
-              <property name="text">
-               <string>ЗАПОЛНИТЬ ДОКУМЕНТ</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
-            </item>
+         <widget class="QScrollArea" name="scrollArea_2">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true"/>
+          </property>
+          <property name="verticalScrollBarPolicy">
+           <enum>Qt::ScrollBarAlwaysOn</enum>
+          </property>
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignHCenter|Qt::AlignTop</set>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents_4">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>961</width>
+             <height>442</height>
+            </rect>
+           </property>
+           <property name="layoutDirection">
+            <enum>Qt::LeftToRight</enum>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_29">
+            <property name="sizeConstraint">
+             <enum>QLayout::SetDefaultConstraint</enum>
+            </property>
            </layout>
-          </item>
+          </widget>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_6">
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_20">
-            <item>
-             <widget class="QLabel" name="label_2">
-              <property name="maximumSize">
-               <size>
-                <width>600</width>
-                <height>40</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <pointsize>20</pointsize>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">#label_2 {
-border-bottom: 2px solid;
-}</string>
-              </property>
-              <property name="text">
-               <string>Название формы / название документа</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_15">
-            <item>
-             <layout class="QVBoxLayout" name="verticalLayout_5" stretch="0,0">
-              <item>
-               <layout class="QHBoxLayout" name="horizontalLayout_18" stretch="0">
-                <property name="spacing">
-                 <number>6</number>
-                </property>
-                <property name="bottomMargin">
-                 <number>20</number>
-                </property>
-                <item>
-                 <widget class="QLineEdit" name="Poisk">
-                  <property name="maximumSize">
-                   <size>
-                    <width>430</width>
-                    <height>64</height>
-                   </size>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">border-top: 0px solid;
-border-bottom: 2px solid;
-background-color: rgb(194, 194, 194);</string>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <layout class="QVBoxLayout" name="verticalLayout_6">
-                <item>
-                 <layout class="QHBoxLayout" name="horizontalLayout_19">
-                  <property name="topMargin">
-                   <number>20</number>
-                  </property>
-                  <item>
-                   <widget class="QLineEdit" name="lineEdit">
-                    <property name="maximumSize">
-                     <size>
-                      <width>430</width>
-                      <height>64</height>
-                     </size>
-                    </property>
-                    <property name="styleSheet">
-                     <string notr="true">border-top: 0px solid;
-border-bottom: 2px solid;
-background-color: rgb(194, 194, 194);</string>
-                    </property>
-                   </widget>
-                  </item>
-                 </layout>
-                </item>
-               </layout>
-              </item>
-             </layout>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_17"/>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_16">
-            <item>
-             <widget class="QPushButton" name="Button_Save_Fill_2">
-              <property name="maximumSize">
-               <size>
-                <width>157</width>
-                <height>44</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <pointsize>20</pointsize>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">#Button_Save_Fill_2 {
+           <widget class="QPushButton" name="Button_Trash_2">
+            <property name="maximumSize">
+             <size>
+              <width>157</width>
+              <height>44</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>20</pointsize>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">#Button_Trash {
 border-top: 2px solid;
 border-top-color: rgb(255, 76, 0);
 border-bottom: 2px solid;
 border-bottom-color: rgb(255, 76, 0);
 }
-#Button_Save_Fill_2:hover {
+#Button_Trash:hover {
 
 }
-#Button_Save_Fill_2:pressed { 
+#Button_Trash:pressed { 
 
 }</string>
-              </property>
-              <property name="text">
-               <string>СОХРАНИТЬ</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="Button_Back_Fill_3">
-              <property name="maximumSize">
-               <size>
-                <width>157</width>
-                <height>44</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <pointsize>20</pointsize>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">#Button_Back_Fill_3 {
+            </property>
+            <property name="text">
+             <string>Удалить</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="Button_Save_2">
+            <property name="maximumSize">
+             <size>
+              <width>157</width>
+              <height>44</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>20</pointsize>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">#Button_Save {
 border-top: 2px solid;
 border-top-color: rgb(255, 76, 0);
 border-bottom: 2px solid;
 border-bottom-color: rgb(255, 76, 0);
 }
-#Button_Back_Fill_3:hover {
+#Button_Save:hover {
 
 }
-#Button_Back_Fill_3:pressed { 
+#Button_Save:pressed { 
 
 }</string>
-              </property>
-              <property name="text">
-               <string>НАЗАД</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
+            </property>
+            <property name="text">
+             <string>Сохранить</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="Button_Back_2">
+            <property name="maximumSize">
+             <size>
+              <width>157</width>
+              <height>44</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>20</pointsize>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">#Button_Back {
+border-top: 2px solid;
+border-top-color: rgb(255, 76, 0);
+border-bottom: 2px solid;
+border-bottom-color: rgb(255, 76, 0);
+}
+#Button_Back:hover {
+
+}
+#Button_Back:pressed { 
+
+}</string>
+            </property>
+            <property name="text">
+             <string>Назад</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
